--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,19 @@
-# C++ objects and libs
-*.slo
-*.lo
+build*/
+logs*/
+doc/html
+doc/doxy.log
+*.user
+*.autosave
+settings/userSettings.json
+# Generated files
+moc_*
+ui_*
 *.o
-*.a
-*.la
-*.lai
-*.so
-*.so.*
-*.dll
-*.dylib
-
-# Qt-es
-object_script.*.Release
-object_script.*.Debug
-*_plugin_import.cpp
-/.qmake.cache
-/.qmake.stash
-*.pro.user
-*.pro.user.*
-*.qbs.user
-*.qbs.user.*
 *.moc
-moc_*.cpp
-moc_*.h
-qrc_*.cpp
-ui_*.h
-*.qmlc
-*.jsc
-Makefile*
-*build-*
-*.qm
 *.prl
 
-# Qt unit tests
-target_wrapper.*
 
-# QtCreator
-*.autosave
+# doxygen
+src/html/
+src/latex/
 
-# QtCreator Qml
-*.qmlproject.user
-*.qmlproject.user.*
-
-# QtCreator CMake
-CMakeLists.txt.user*
-
-# QtCreator 4.8< compilation database
-compile_commands.json
-
-# QtCreator local machine specific files for imported projects
-*creator.user*
-
-*_qmlcache.qrc
